<resources>
    <string name="app_name">Autostrad Rent a Car</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="urdu">Arabic</string>
    <string name="continueq">Continue</string>
    <string name="login">Log In</string>
    <string name="loginn">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="skip">Skip</string>
    <string name="enterCode">Enter the code</string>
    <string name="codeMessage">We sent the code to </string>
    <string name="pleaseWait">Please Wait....</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="proceed">Proceed</string>
    <string name="dontHaveAccount">Dont have an account ?</string>
    <string name="skipNow">Skip for now</string>
    <string name="enterEmail">Email Address</string>
    <string name="haveAnAccount">Have an account ?</string>
    <string name="secondsRemaining">seconds</string>
    <string name="resendCodeIn">Resend the code in</string>
    <string name="seconds">00</string>
    <string name="resendOTP">Click to resend code</string>
    <string name="optSent">Code sent successfully</string>
    <string name="enterOTP">Please enter code</string>
    <string name="errorOTP">Code should be 6 digit</string>
    <string name="enterMobile">Please enter mobile number</string>
    <string name="enterMobileValid">Please enter valid mobile number</string>
    <string name="enterEmailId">Please enter email</string>
    <string name="enterEmailValid">Please enter valid email</string>
    <string name="viewMore">View more details</string>
    <string name="myAccount">My Account</string>
    <string name="document">Document</string>
    <string name="additionalDriver">Additional Driver</string>
    <string name="booking">Booking</string>
    <string name="managePayment">Manage Payment</string>
    <string name="invoices">Invoices</string>
    <string name="salik_Charges">Salik Charges</string>
    <string name="traffic_Lines">Traffic Lines</string>
    <string name="enterPassword">Please enter password</string>
    <string name="enterNewPassword">Please enter new password</string>
    <string name="enterConfirmPassword">Please enter confirm password</string>
    <string name="passwordNotMatch">Confirm password not matched with password</string>
    <string name="minPassLength">Password contain minimum 6 characters</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="houseNo">House No./ Building No.</string>
    <string name="streetName">Street Name</string>
    <string name="streetAddress">Street/Area</string>
    <string name="area">Area</string>
    <string name="landMark">Landmark</string>
    <string name="city">City</string>
    <string name="selectEmirate">Select Emirate</string>
    <string name="additionalDriverDetails">Additional Driver Details</string>
    <string name="nationality">Nationality</string>
    <string name="middleName">Middle Name</string>
    <string name="enterMiddleName">Enter middle name</string>
    <string name="upcomingReservation">Upcoming Reservations</string>
    <string name="pastRental">Past Rentals</string>
    <string name="cancel">Cancel</string>
    <string name="viewBooking">View Booking</string>
    <string name="helpSupport">Help/Support</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="bookingError">You don’t have a rental history yet!</string>
    <string name="addNewCard">Add New Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="nameOnCard">Name on card</string>
    <string name="validThrough">Valid through (MM/YY)</string>
    <string name="ccv">CVV</string>
    <string name="securelyMessage">Securely save card details</string>
    <string name="save">Save</string>
    <string name="enterCardNumber">Please enter card number</string>
    <string name="enterCardName">Please enter name on card</string>
    <string name="enterValidMonth">Please enter valid month/year</string>
    <string name="enterMonth">Please enter month/year</string>
    <string name="enterCvv">Please enter cvv</string>
    <string name="enterValidCvv">Please enter valid cvv</string>
    <string name="enterValidCarNumber">Please enter 16 digit card number</string>
    <string name="checkCardFormat">Please check card expire format</string>
    <string name="docDate">Doc. Date</string>
    <string name="docType">Doc. Type</string>
    <string name="docNo">Doc. No.</string>
    <string name="creditAmt">Credit Amt</string>
    <string name="debitAmt">Debit Amt</string>
    <string name="paymentType">Payment Type</string>
    <string name="download">Download</string>
    <string name="noPdfFound">No pdf path found</string>
    <string name="allowPermission">Please allow permission from setting.</string>
    <string name="somethingWrong">Something went wrong, try again.</string>
    <string name="noPdfAppAvailable">No application available to view PDF</string>
    <string name="downloading">Downloading....</string>
    <string name="downloadingCompete">Downloading Complete</string>
    <string name="selectHouseNo">Enter house no/building name</string>
    <string name="selectStreet">Enter street/area</string>
    <string name="selectZip">Enter zip/postal code</string>
    <string name="selectCountry1">Enter country</string>
    <string name="selectCity1">Enter city</string>
    <string name="state">State</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="fleet">Fleet</string>
    <string name="menu">Menu</string>
    <string name="exitMessage">Press once again to exit !</string>
    <string name="pickUpLocation">Pickup Location</string>
    <string name="dropOfLocation">Drop-off Location</string>
    <string name="userCurrentLocation">Use my current location</string>
    <string name="pickUp">Pickup</string>
    <string name="dropOf">Drop-off</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome</string>
    <string name="selectCar">Select Car</string>
    <string name="cardview">Card View</string>
    <string name="gridview">Grid View</string>
    <string name="payLater">Pay Later</string>
    <string name="payNow">Pay Now</string>
    <string name="more">More</string>
    <string name="deliever">Deliver</string>
    <string name="selfPickup">Self-Pickup</string>
    <string name="collect">Collect</string>
    <string name="selfreturn">Self-return</string>
    <string name="enterLocationDeliver">Enter Location to Deliver</string>
    <string name="enterLocationCollect">Enter Location to Collect</string>
    <string name="filterYourSearch">Filter Your Search</string>
    <string name="apply">Apply</string>
    <string name="carFleet">Car Fleet</string>
    <string name="personalDetails">Personal Details</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="alternateNumber">Alternate Number</string>
    <string name="dateBirth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="saveChanges">Save Changes</string>
    <string name="pleaseEnterFirstName">Please enter first name</string>
    <string name="pleaseEnterLastName">Please enter last name</string>
    <string name="pleaseEnterAlternateNumber">Please enter alternate mobile number</string>
    <string name="pleaseEnterDOB">Please enter date of birth</string>
    <string name="conformLocation">Confirm Location</string>
    <string name="currentLocation">Current Location</string>
    <string name="loading">Loading....</string>
    <string name="getLOcation">Get Location</string>
    <string name="gpsDisable">Your GPS seems to be disabled, do you want to enable it to checkout map?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permissionAccess">Permission Access</string>
    <string name="permissionAllow">Please allow permission from setting.</string>
    <string name="allow">Allow</string>
    <string name="searchLocation">Search for location</string>
    <string name="enterSearchLocation">Please enter location to search</string>
    <string name="locationAdded">Location already added</string>
    <string name="price">Price</string>
    <string name="seats">Seat</string>
    <string name="passengers">Passengers</string>
    <string name="doors">Doors</string>
    <string name="transmission">Transmission</string>
    <string name="fuel">Fuel</string>
    <string name="category">Category</string>
    <string name="group">Group</string>
    <string name="getLocation">Get Location</string>
    <string name="carDetails">Car Details</string>
    <string name="book">Book</string>
    <string name="upgrade">Upgrade</string>
    <string name="carSpecification">Car Specification</string>
    <string name="insranceOption">Insurance Option</string>
    <string name="promotionCode">Promotion Code</string>
    <string name="estimatedTotal">Estimated Total</string>
    <string name="ade100">ADE 100</string>
    <string name="baseFree">(Base Free + Taxes Free)</string>
    <string name="termConditions">Term &amp; Conditions</string>
    <string name="upgradeAvailable">Upgrade Availability</string>
    <string name="enterYourDetails">Enter your details</string>
    <string name="driversInformation">Drivers Information</string>
    <string name="edit">Edit</string>
    <string name="uploadDriverLicence">Please Upload Driver Licence</string>
    <string name="reUploadDriverLicence">Re-Upload Driver Licence</string>
    <string name="paymentDetails">Payment Details</string>
    <string name="confirmPayment">Confirm Payment</string>
    <string name="similar">(or similar)</string>
    <string name="creditCard">Credit Card</string>
    <string name="checkPaymentDetails">Please check payment details</string>
    <string name="editInformation">Edit Information</string>
    <string name="saveDetails">Save Details</string>
    <string name="fName">First Name:</string>
    <string name="lName">Last Name:</string>
    <string name="pEmail">Email:</string>
    <string name="pPhone">Phone:</string>
    <string name="confirm">Confirm</string>
    <string name="taxInsurance">Tax &amp; Insurance Included</string>
    <string name="bookingSucessfull">Your Booking is Successful!!!</string>
    <string name="backToHome">Back to Home</string>
    <string name="viewMyBooking">View My Booking</string>
    <string name="confirmBooking">Confirm Booking</string>
    <string name="fastReward">Autostrad Rent Car Rewards</string>
    <string name="specialOffers">Special Offers</string>
    <string name="faqs">FAQs</string>
    <string name="locations">Location</string>
    <string name="aboutCompany">About the Company</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string name="reservationNo">Reservation Number</string>
    <string name="cancelReason">Booking Cancellation Reason</string>
    <string name="editCard">Edit Card</string>
    <string name="selectNewDropOffDate">Select New Drop off Date</string>
    <string name="selectNewDropOffTime">Select New Drop off Time</string>
    <string name="youNeedToPay">You need to pay AED</string>
    <string name="txt1">Leading Car Rental Company with the largest network of Branches &amp; Pickup points</string>
    <string name="txt2">Leading Car Rental Company with the largest network of Branches &amp; Pickup points</string>
    <string name="txt3">Provides the most affordable rental services in the country.</string>
</resources>