<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:orientation="vertical"
                        android:background="@drawable/curve_white_bg">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunit_sans_bold"
                            android:textSize="25sp"
                            android:text="@string/welcomeTo"
                            android:textColor="@color/textDark">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunit_sans_bold"
                            android:textSize="18sp"
                            android:text="@string/app_name"
                            android:textColor="@color/textDark">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_regular"
                            android:textSize="14sp"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/ic_baseline_brightness_1_24"
                            android:layout_marginTop="20dp"
                            android:text="@string/txt1"
                            android:textColor="@color/textDark">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_regular"
                            android:textSize="14sp"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/ic_baseline_brightness_1_24"
                            android:layout_marginTop="10dp"
                            android:text="@string/txt2"
                            android:textColor="@color/textDark">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_regular"
                            android:textSize="14sp"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/ic_baseline_brightness_1_24"
                            android:layout_marginTop="10dp"
                            android:text="@string/txt3"
                            android:textColor="@color/textDark">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </LinearLayout>

                </LinearLayout>


                <ImageView
                    android:id="@+id/imgCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    android:paddingRight="-130dp"
                    android:src="@drawable/ic_car_two"></ImageView>


                <LinearLayout
                    android:layout_below="@+id/imgCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/login"
                        android:padding="15dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:background="@drawable/button_bg"></TextView>

                    <TextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:textColor="@color/lightOrange"
                        android:text="@string/signUp"
                        android:padding="15dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:background="@drawable/corner_bg"></TextView>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunit_sans_bold"
                    android:textSize="18sp"
                    android:text="@string/skip"
                    android:padding="10dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/textDark">

                </TextView>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>



</layout>