<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/colorWhite">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservationNo"
                android:textColor="@color/textDark"
                android:alpha="0.7"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/txtResevationNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservationNo"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="20sp">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etxDate"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:hint="@string/selectNewDropOffDate">

                </EditText>

                <EditText
                    android:id="@+id/etxTime"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:padding="10dp"
                    android:background="@drawable/corner_gray_bg"
                    android:hint="@string/selectNewDropOffTime">

                </EditText>

                <TextView
                    android:id="@+id/txtAEDMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youNeedToPay"
                    android:visibility="gone"
                    android:textColor="@color/textDark"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/txtSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="center"
                    android:layout_marginTop="120dp"
                    android:layout_marginBottom="50dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:paddingRight="80dp"
                    android:paddingLeft="80dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/nunit_sans_bold"
                    android:background="@drawable/button_orange_bg"></TextView>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>