<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/colorWhite">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="20dp"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/colorPrimaryDark"
           android:gravity="center_vertical"
           android:textSize="18sp"
           android:layout_marginTop="0dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:fontFamily="@font/nunito_sans_semibold"
           android:text="@string/cancelReason">

       </TextView>


       <EditText
           android:id="@+id/etxReason"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_width="match_parent"
           android:layout_height="250dp"
           android:paddingRight="10dp"
           android:paddingLeft="10dp"
           android:paddingTop="20dp"
           android:paddingBottom="10dp"
           android:gravity="start"
           android:hint="@string/comment"
           android:imeOptions="actionDone"
           android:background="@drawable/corner_blue_light_bg">

       </EditText>

       <TextView
           android:id="@+id/txtSubmit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fontFamily="@font/nunit_sans_bold"
           android:textColor="@color/colorWhite"
           android:text="@string/submit"
           android:padding="16dp"
           android:layout_marginTop="40dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginBottom="10dp"
           android:layout_gravity="center"
           android:gravity="center"
           android:textSize="18dp"
           android:background="@drawable/button_blue_bg"></TextView>


   </LinearLayout>

</RelativeLayout>