<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/lnrSuccess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:visibility="gone"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_right_mark"></ImageView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nunit_sans_bold"
                    android:text="@string/bookingSucessfull"
                    android:textColor="@color/lightOrange"
                    android:textSize="27sp">

                </TextView>


                <TextView
                    android:id="@+id/txtBackHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="70dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="16dp"
                    android:fontFamily="@font/nunit_sans_bold"
                    android:text="@string/backToHome"
                    android:background="@drawable/corner_white_bg"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/txtViewBooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="16dp"
                    android:fontFamily="@font/nunit_sans_bold"
                    android:text="@string/viewMyBooking"
                    android:background="@drawable/corner_white_bg"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp">

                </TextView>


            </LinearLayout>

        </RelativeLayout>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

        </WebView>
    </RelativeLayout>

</layout>